# design_patterns

./: .gitignore  1.patch  AGENTS.md  CMakeLists.txt  README.md  设计模式生活类比.md
behavioral/: README.md
behavioral/command/: README.md  command.cpp
behavioral/iterator/: README.md  iterator_storage_demo.cpp
behavioral/mediator/: README.md  mediator.cpp
behavioral/memento/: README.md  memento.cpp
behavioral/visitor/: README.md  visitor.cpp
creational/: README.md
creational/builder/: README.md  builder.cpp
structural/: README.md
structural/bridge/: README.md  bridge.cpp
structural/composite/: README.md  composite.cpp
